--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                   <a href="" class="catalog-menu__item">Электропилы</a>
                   <a href="" class="catalog-menu__item">Наборы инструментов</a>
                   <a href="" class="catalog-menu__item">Акксесуары</a>
+                  <a href="" class="catalog-menu__item">Аккуары</a>
 
                 </nav>
                 <a href="#" class="sale">Распродажа</a>
