--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
                   <a href="" class="catalog-menu__item">Наборы инструментов</a>
                   <a href="" class="catalog-menu__item">Акксесуары</a>
                   <a href="" class="catalog-menu__item">Аккуары</a>
+                  <a href="" class="catalog-menu__item">Аккуары</a>
 
                 </nav>
                 <a href="#" class="sale">Распродажа</a>
